<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/vnd_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/VND"
            android:textSize="36sp" />

        <EditText android:id="@+id/edt_vnd"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/type_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_type"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/selected_item"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/name_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_name"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/review_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_review"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>