<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddActivity"
    android:layout_marginHorizontal="6dp">

    <LinearLayout android:id="@+id/vnd_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/VND"
            android:textSize="36sp" />

        <EditText android:id="@+id/edt_vnd"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/type_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/vnd_expense">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_type"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/selected_item"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/name_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/type_expense">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_name"
            android:textSize="24sp" />

        <EditText android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/date_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/name_expense">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_date"
            android:textSize="24sp" />

        <TextView android:id="@+id/edt_date"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/review_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/date_expense">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/expense_review"
            android:textSize="24sp" />

        <RadioGroup android:id="@+id/review_rg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:checkedButton="@+id/rb_ns">

            <RadioButton android:id="@+id/rb_good"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Good"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/rb_bad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Bad"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/rb_ns"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Not sure"
                android:textSize="18sp"
                android:layout_weight="1" />

        </RadioGroup>

    </LinearLayout>

    <Button android:id="@+id/save_expense_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_save_expense"/>

</androidx.constraintlayout.widget.ConstraintLayout>

